update guide page for custom date range

--- a/ceeq/apps/help/templates/guide.html
+++ b/ceeq/apps/help/templates/guide.html
@@ -239,6 +239,22 @@
                                         </ul>
                                     <li>If none component is under our framework, then no component is selected for this ticket</li>
                                 </ul>
+                            <li>Custom Date Range</li>
+                                We provide specific user the ability to select their own date range to track JIRA tickets.
+                                <ul>
+                                    <li>The default date range is last 30 days up to today.</li>
+                                    <li>System gives user several shortcuts of date range:</li>
+                                        <ul>
+                                            <li>Today</li>
+                                            <li>Yesterday</li>
+                                            <li>Last 7 Days</li>
+                                            <li>Last 30 Days</li>
+                                            <li>This Month</li>
+                                            <li>Last Month</li>
+                                        </ul>
+                                    <li>User could select any date range from Custom Range</li>
+                                    <li>For custom date range, we track Internal Testing and UAT tickets only.</li>
+                                </ul>
                         </ul>
                     </div>
 
