--- a/ceeq/apps/projects/templates/project_detail/project_detail_custom.html
+++ b/ceeq/apps/projects/templates/project_detail/project_detail_custom.html
@@ -7,14 +7,9 @@
     </div>
 
     <div id="custom-uat-type" class="query-field pull-right">
-        <select class="form-control" style="width: 150px; height: 30px; border: 0; padding: 0; background: #f4f4f4;" onchange="attachUatType()">
-            {% if  uat_type_custom  == 'exclude_uat' %}
-                <option value="exclude_uat" selected>Internal Testing</option>
-                <option value="only_uat">UAT</option>
-            {% else %}
-                <option value="exclude_uat" >Internal Testing</option>
-                <option value="only_uat" selected>UAT</option>
-            {% endif %}
+        <select class="form-control" style="width: 150px; height: 30px; border: 0; padding: 0;" onchange="attachUatType()">
+            <option value="exclude_uat" {% if  uat_type_custom  == 'exclude_uat' %}selected{% endif %}>Internal Testing</option>
+            <option value="only_uat" {% if  uat_type_custom  == 'only_uat' %}selected{% endif %}>UAT</option>
         </select>
     </div>
 </div>
