change 'UAT Testing' status from 'Open' to 'Resolved'

--- a/ceeq/apps/help/templates/guide.html
+++ b/ceeq/apps/help/templates/guide.html
@@ -197,14 +197,20 @@
                                             <li>Open</li>
                                             <li>In Progress</li>
                                             <li>Reopen</li>
-                                            <li>UAT Testing</li>
                                             <li>Discovery</li>
                                             <li>Review</li>
                                             <li>Pending</li>
                                             <li>Research</li>
                                         </ul>
                                     <li>Resolved</li>
+                                        <ul>
+                                            <li>Resolved</li>
+                                            <li>UAT Testing</li>
+                                        </ul>
                                     <li>Closed</li>
+                                        <ul>
+                                            <li>Closed</li>
+                                        </ul>
                                 </ul>
                             <li>Issue Resolution: </li>
                                 <ul>
