Adding testing characteristics back

--- a/ceeq/apps/projects/templates/project_detail/project_detail.html
+++ b/ceeq/apps/projects/templates/project_detail/project_detail.html
@@ -82,10 +82,20 @@
                 </div>
             {% endif %}
 
-            <!--
+
+            <br>
             <div class="row">
                 <legend>Testing Characteristics (Scales: 0-5)</legend>
             </div>
+            <div class="row">
+                <div class="col-md-1"></div>
+                <div class="col-md-5" style="text-align: center">
+                    <h4>Domain Testing Characteristics</h4>
+                </div>
+                <div class="col-md-5" style="text-align: center">
+                    <h4>Technical Testing Characteristics</h4>
+                </div>
+            </div><br>
             <div class="row" style="margin-bottom: 10px;">
                 <div class="col-md-1"></div>
                 <div class="col-md-2">Accuracy</div>
@@ -128,7 +138,7 @@
                 <div class="col-md-2"></div>
                 <div class="col-md-3"></div>
             </div>
-            -->
+
 
             {% csrf_token %}
             <div class="row" style="margin-top: 30px; margin-bottom: 50px;">
