--- a/ceeq/apps/projects/templates/sub_component/project_sub_component_apps.html
+++ b/ceeq/apps/projects/templates/sub_component/project_sub_component_apps.html
@@ -36,6 +36,8 @@
         }
 
         $.getJSON("{% url 'fetch_subcomponents_pie_component' project.id %}?component_type={{ component_type }}&uat_type={{ uat_type }}&start={{ start }}&end={{ end }}&uat_type_custom={{ uat_type_custom }}").done(function(data){
+            var div_pie_height = data[1].length * 25 + 450;
+            $('#apps_subcomponent_percentage_pie_chart').height(div_pie_height);
             draw_pie_chart_graph(data, '{{ uat_type }}');
         });
         {% include 'sub_component/project_sub_components.js' %}
