update ProjectComponentsDefectsDensity model

--- a/ceeq/apps/defects_density/templates/dd_detail.html
+++ b/ceeq/apps/defects_density/templates/dd_detail.html
@@ -62,7 +62,7 @@
             <div class="row" style="margin-bottom: 10px;">
                 <div class="col-md-1"></div>
                 <div class="col-md-2" style="text-align: left;font-size: 18px;">Prompts</div>
-                <div class="col-md-8">{{ form.voiceSlots }}</div>
+                <div class="col-md-8">{{ form.voice_slots }}</div>
             </div>
 
             {% csrf_token %}
