update for model field change voiceSlots to voice_slots

--- a/ceeq/apps/defects_density/templates/dd_list_single.html
+++ b/ceeq/apps/defects_density/templates/dd_list_single.html
@@ -47,7 +47,7 @@
                             <td class="col-sm-1" style="text-align: center">{{ dd.platform|floatformat:3 }}</td>
                             <td class="col-sm-1" style="text-align: center">{{ dd.reports|floatformat:3 }}</td>
                             <td class="col-sm-1" style="text-align: center">{{ dd.application|floatformat:3 }}</td>
-                            <td class="col-sm-1" style="text-align: center">{{ dd.voiceSlots|floatformat:3 }}</td>
+                            <td class="col-sm-1" style="text-align: center">{{ dd.voice_slots|floatformat:3 }}</td>
                             <td class="col-sm-1" style="text-align: center">
                                 <a href="{% url 'dd_delete' dd.id %}" style="color: red;"><i class="fa fa-trash-o fa-lg"></i></a> |
                                 <a href="{% url 'dd_detail' dd.id %}"><i class="fa fa-edit fa-lg"></i> </a>
