--- a/ceeq/apps/projects/templates/project_detail/project_detail_exclude_uat.html
+++ b/ceeq/apps/projects/templates/project_detail/project_detail_exclude_uat.html
@@ -1,3 +1,7 @@
+<div id="ceeq_trend_graph_exclude_uat" style="width: 700px; height:400px; margin: 0 auto;">
+
+</div>
+
 <div id="component_percentage_pie_chart_exclude_uat" style="width: 700px; height: 600px; margin: 0 auto;">
     <div class="loading" style="text-align:center; margin-top: 100px;">
         <i class="fa fa-spinner fa-2x fa-spin"></i>
