export ceeq trend graph works

--- a/ceeq/apps/projects/templates/project_detail/project_detail_include_uat.html
+++ b/ceeq/apps/projects/templates/project_detail/project_detail_include_uat.html
@@ -1,3 +1,17 @@
+<div id="ceeq_trend_chart_include_uat" style="width: 700px; height:400px; margin: 0 auto;">
+
+</div>
+
+<div class="row">
+    <p style="text-align: center" id="ceeq_trend_chart_include_uat_export">
+        Export Graph to:
+        <button id="png_ceeq_trend_include_uat">PNG</button>
+        <button id="jpeg_ceeq_trend_include_uat">JPEG</button>
+        <button id="pdf_ceeq_trend_include_uat">PDF</button>
+    </p>
+</div>
+<br>
+
 <div id="component_percentage_pie_chart_include_uat" style="width: 700px; height: 600px; margin: 0 auto;">
     <div class="loading" style="text-align:center; margin-top: 100px;">
         <i class="fa fa-spinner fa-2x fa-spin"></i>
