--- a/ceeq/apps/projects/templates/project_detail/project_detail_exclude_uat.html
+++ b/ceeq/apps/projects/templates/project_detail/project_detail_exclude_uat.html
@@ -1,7 +1,16 @@
-<div id="ceeq_trend_graph_exclude_uat" style="width: 700px; height:400px; margin: 0 auto;">
+<div id="ceeq_trend_chart_exclude_uat" style="width: 700px; height:400px; margin: 0 auto;">
 
 </div>
 
+<div class="row">
+    <p style="text-align: center" id="ceeq_trend_chart_exclude_uat_export">
+        Export Graph to:
+        <button id="png_ceeq_trend_exclude_uat">PNG</button>
+        <button id="jpeg_ceeq_trend_exclude_uat">JPEG</button>
+        <button id="pdf_ceeq_trend_exclude_uat">PDF</button>
+    </p>
+</div>
+<br>
 <div id="component_percentage_pie_chart_exclude_uat" style="width: 700px; height: 600px; margin: 0 auto;">
     <div class="loading" style="text-align:center; margin-top: 100px;">
         <i class="fa fa-spinner fa-2x fa-spin"></i>
