--- a/ceeq/apps/defects_density/templates/dd_list_single.html
+++ b/ceeq/apps/defects_density/templates/dd_list_single.html
@@ -2,7 +2,7 @@
 {% block body %}
     <div class="row">
             <legend>Project Information</legend>
-            <p><strong>Project Name: </strong>{{ project.name }}</p>
+            <p><strong>Project Name: </strong>{{ project.name }}, <strong>Version: </strong>{{ project.jira_version }}</p>
             <p>
                 {% if project.score == 101 %}
                     No created issues
@@ -26,9 +26,10 @@
             <table class="table table-striped table-hover table-condensed table-bordered" style="">
                 <thead>
                     <tr>
-                        <td style="text-align: center"><strong>Version</strong></td>
+{#                        <td style="text-align: center"><strong>Version</strong></td>#}
                         <td style="text-align: center"><strong>Date</strong></td>
                         <td style="text-align: center"><strong>CEEQ</strong></td>
+                        <td style="text-align: center"><strong>Projected</strong></td>
                         <td style="text-align: center"><strong>CXP</strong></td>
                         <td style="text-align: center"><strong>Platform</strong></td>
                         <td style="text-align: center"><strong>Reports</strong></td>
@@ -40,9 +41,10 @@
                 <tbody>
                     {% for dd in project_dds %}
                         <tr>
-                            <td class="col-sm-2" style="text-align: center">{{ dd.version }}</td>
+{#                            <td class="col-sm-2" style="text-align: center">{{ dd.version }}</td>#}
                             <td class="col-sm-2" style="text-align: center">{{ dd.created | date:"M d, Y"}}</td>
                             <td class="col-sm-2" style="text-align: center">{{ dd.ceeq|floatformat:3 }}</td>
+                            <td class="col-sm-2" style="text-align: center">{{ dd.ceeq_closed|floatformat:3 }}</td>
                             <td class="col-sm-1" style="text-align: center">{{ dd.cxp|floatformat:3 }}</td>
                             <td class="col-sm-1" style="text-align: center">{{ dd.platform|floatformat:3 }}</td>
                             <td class="col-sm-1" style="text-align: center">{{ dd.reports|floatformat:3 }}</td>
