export pie/trend charts together

--- a/ceeq/apps/projects/templates/project_detail/project_detail_include_uat.html
+++ b/ceeq/apps/projects/templates/project_detail/project_detail_include_uat.html
@@ -1,3 +1,10 @@
+<br>
+<div class="row">
+    <div id="" class="pull-right">
+        <button id="export_all_include_uat">Export All</button>
+    </div>
+</div>
+
 <div id="component_percentage_pie_chart_include_uat" style="width: 700px; height: 600px; margin: 0 auto;">
     <div class="loading" style="text-align:center; margin-top: 100px;">
         <i class="fa fa-spinner fa-2x fa-spin"></i>
