export two charts to different types

--- a/ceeq/apps/projects/templates/project_detail/project_detail_exclude_uat.html
+++ b/ceeq/apps/projects/templates/project_detail/project_detail_exclude_uat.html
@@ -1,7 +1,10 @@
 <br>
 <div class="row">
-    <div id="" class="pull-right">
-        <button id="export_all_exclude_uat">Export All</button>
+    <div id="export_all_exclude_uat" class="pull-right">
+        Export All to:
+        <button id="png_export_all_exclude_uat">PNG</button>
+        <button id="jpeg_export_all_exclude_uat">JPEG</button>
+        <button id="pdf_export_all_exclude_uat">PDF</button>
     </div>
 </div>
 
