hide export button for single chart

--- a/ceeq/apps/projects/templates/project_detail/project_detail_exclude_uat.html
+++ b/ceeq/apps/projects/templates/project_detail/project_detail_exclude_uat.html
@@ -1,12 +1,14 @@
 <br>
-<div class="row">
-    <div id="export_all_exclude_uat" class="pull-right">
-        Export All to:
-        <button id="png_export_all_exclude_uat">PNG</button>
-        <button id="jpeg_export_all_exclude_uat">JPEG</button>
-        <button id="pdf_export_all_exclude_uat">PDF</button>
+{% if weight_factor_exclude_uat %}
+    <div class="row">
+        <div id="export_all_exclude_uat" class="pull-right">
+            Export All to:
+            <button id="png_export_all_exclude_uat">PNG</button>
+            <button id="jpeg_export_all_exclude_uat">JPEG</button>
+            <button id="pdf_export_all_exclude_uat">PDF</button>
+        </div>
     </div>
-</div>
+{% endif %}
 
 <div id="component_percentage_pie_chart_exclude_uat" style="width: 700px; height: 600px; margin: 0 auto;">
     <div class="loading" style="text-align:center; margin-top: 100px;">
@@ -18,14 +20,14 @@
 <div id="qei_log_exclude_uat" style="width: 500px; height: 300px; margin: 0 auto;" hidden></div>
 
 {% if weight_factor_exclude_uat %}
-    <div class="row">
-        <p style="text-align: center" id="export_data_exclude_uat">
-            Export Graph to:
-            <button id="png_exclude_uat">PNG</button>
-            <button id="jpeg_exclude_uat">JPEG</button>
-            <button id="pdf_exclude_uat">PDF</button>
-        </p>
-    </div>
+{#    <div class="row">#}
+{#        <p style="text-align: center" id="export_data_exclude_uat">#}
+{#            Export Graph to:#}
+{#            <button id="png_exclude_uat">PNG</button>#}
+{#            <button id="jpeg_exclude_uat">JPEG</button>#}
+{#            <button id="pdf_exclude_uat">PDF</button>#}
+{#        </p>#}
+{#    </div>#}
 {% else %}
     <div class="row">
         <p style="text-align: center" id="export_qei_log_exclude_uat">
@@ -42,14 +44,15 @@
 <div id="ceeq_trend_chart_exclude_uat" style="width: 700px; height:400px; margin: 0 auto;">
 </div>
 
-<div class="row">
-    <p style="text-align: center" id="ceeq_trend_chart_exclude_uat_export">
-        Export Graph to:
-        <button id="png_ceeq_trend_exclude_uat">PNG</button>
-        <button id="jpeg_ceeq_trend_exclude_uat">JPEG</button>
-        <button id="pdf_ceeq_trend_exclude_uat">PDF</button>
-    </p>
-</div>
+
+{#<div class="row">#}
+{#    <p style="text-align: center" id="ceeq_trend_chart_exclude_uat_export">#}
+{#        Export Graph to:#}
+{#        <button id="png_ceeq_trend_exclude_uat">PNG</button>#}
+{#        <button id="jpeg_ceeq_trend_exclude_uat">JPEG</button>#}
+{#        <button id="pdf_ceeq_trend_exclude_uat">PDF</button>#}
+{#    </p>#}
+{#</div>#}
 
 <br>
 
