update help template for new components

--- a/ceeq/apps/help/templates/guide.html
+++ b/ceeq/apps/help/templates/guide.html
@@ -113,35 +113,43 @@
                                         <li>VUI</li>
                                     </ul>
                                     <li>Grammars</li>
+                                    <li>Logging</li>
+                                    <li>Requirements</li>
                                     <li>Web Service</li>
                                 </ul>
-                            <li>CXP - Customer Experience Portal - 0.10</li>
+                            <li>Client - 0.00</li>
+                                <ul>
+                                    <li>Enviornment</li>
+                                    <li>Test Data</li>
+                                </ul>
+                            <li>CXP - 0.10</li>
                                 <ul>
                                     <li>HCCP - Host Customer Contact Portal</li>
                                     <li>ODP - On Demand Portal</li>
-                                    <li>Real Feed</li>
+                                    <li>Realfeed</li>
+                                    <li>Requirements</li>
                                     <li>User Portal</li>
                                 </ul>
                             <li>Platform - 0.15</li>
                                 <ul>
-                                    <li>Components</li>
                                     <li>Database</li>
                                     <li>Host</li>
-                                    <ul>
-                                        <li>WSSI</li>
-                                        <li>WSO2</li>
-                                    </ul>
+                                        <ul>
+                                            <li>WSSI</li>
+                                            <li>WSO2</li>
+                                        </ul>
+                                    <li>Networking</li>
+                                    <li>Requirements</li>
                                     <li>Voice Browser</li>
                                 </ul>
 
                             <li>Reports - 0.15</li>
                                 <ul>
-                                    <li>CDR Feeds - Client Detail Reports</li>
-                                    <li>Custom Reports</li>
-                                    <li>Standard Reports</li>
-                                    <li>TXL/BHV Logs</li>
+                                    <li>Data Feeds</li>
+                                    <li>Reports</li>
+                                    <li>Requirements</li>
                                 </ul>
-                            <li>Voice Prompts - 0.20</li>
+                            <li>Voice - 0.20</li>
                                 <ul>
                                     <li>English</li>
                                     <li>Spanish</li>
