--- a/ceeq/apps/core/templates/base.html
+++ b/ceeq/apps/core/templates/base.html
@@ -139,7 +139,7 @@
 
                                 {% if user.is_superuser %}
                                     <li><a href="{% url 'user_management' %}"><i class="fa fa-wrench"></i> User Management</a> </li>
-                                    <li><a href="{% url 'admin:index' %}"><i class="fa fa-cogs"></i> Django Admin</a> </li>
+                                    <li><a href="{% url 'admin:index' %}" target="_blank"><i class="fa fa-cogs"></i> Django Admin</a> </li>
                                 {% endif %}
                                 <li><a href="{% url 'sign_out' %}"><i class="fa fa-user"></i> Sign Out</a></li>
                             </ul>
