--- a/ceeq/apps/projects/templates/project_detail/project_detail.html
+++ b/ceeq/apps/projects/templates/project_detail/project_detail.html
@@ -52,6 +52,23 @@
                         </select>
                     </div>
                 </div>
+
+                <div class="row" style="margin-bottom: 10px;">
+                    <div class="col-md-1"></div>
+                    <div class="col-md-2" style="text-align: left;font-size: 18px;">Project Type</div>
+                    <div class="col-md-8">
+                        <select name="project_type" class="form-control" id="project_type">
+                            {% for item in project_types %}
+                                {% if item.name == project.project_type.name %}
+                                    <option value="{{ item.value }}" selected>{{ item.name }}</option>
+                                {% else %}
+                                    <option value="{{ item.value }}">{{ item.name }}</option>
+                                {% endif %}
+                            {% endfor %}
+                        </select>
+                    </div>
+                </div>
+
                 <div class="row" style="margin-bottom: 10px;">
                     <div class="col-md-1"></div>
                     <div class="col-md-2" style="text-align: left;font-size:18px;">Project Action</div>
