--- a/ceeq/apps/projects/templates/projects/project_new.html
+++ b/ceeq/apps/projects/templates/projects/project_new.html
@@ -18,6 +18,23 @@
                 <div class="col-md-2" style="text-align: left;font-size:18px;">JIRA URL</div>
                 <div class="col-md-8">{{ form.jira_name }}</div>
             </div>
+
+            <div class="row" style="margin-bottom: 10px;">
+                <div class="col-md-1"></div>
+                <div class="col-md-2" style="text-align: left;font-size: 18px;">Project Type</div>
+                <div class="col-md-8">
+                    <select name="project_type" class="form-control" id="project_type">
+                        {% for item in project_types %}
+                            {% if item.name == project.project_type.name %}
+                                <option value="{{ item.value }}" selected>{{ item.name }}</option>
+                            {% else %}
+                                <option value="{{ item.value }}">{{ item.name }}</option>
+                            {% endif %}
+                        {% endfor %}
+                    </select>
+                </div>
+                </div>
+
             <div class="row" style="margin-bottom: 10px;">
                 <div class="col-md-1"></div>
                 <div class="col-md-2" style="text-align: left;font-size:18px;">Active</div>
