comment standard component names in settings file

--- a/ceeq/apps/help/templates/guide.html
+++ b/ceeq/apps/help/templates/guide.html
@@ -98,7 +98,7 @@
                     <div id="components_weight">
                         <h4 style="padding-top: 75px; margin-top: -75px;">Components Weight Factor&nbsp;&nbsp;<a href="#index"><i class="fa fa-arrow-circle-up"></i></a></h4>
                         <p>During the procedure of West developed solutions testing, the ration of following components
-                        are considered as <strong>(8 : 2 : 3 : 3 : 4)</strong> - (alphabet order)</p>
+                        are considered as <strong>(8 : 0 : 2 : 3 : 3 : 4)</strong> - (alphabet order)</p>
                         <ul>
                             <li>Application - 0.40</li>
                                 <ul>
