Rewrite views under apps/queries

--- a/ceeq/apps/core/templates/base.html
+++ b/ceeq/apps/core/templates/base.html
@@ -108,7 +108,7 @@
                         <li><a href="{% url 'home' %}"><i class="fa fa-home"></i> Home </a></li>
                         <li><a href="{% url 'projects' %}"><i class="fa fa-bar-chart-o"></i> Projects</a> </li>
                         <li><a href="{% url 'help_guide' %}"><i class="fa fa-thumbs-o-up"></i> Help</a> </li>
-
+                        <li><a href="{% url 'q_projects' %}">Queries</a></li>
                     </ul>
 
                     <ul class="nav navbar-nav navbar-right">
