--- a/ceeq/apps/queries/templates/q_projects/projects.html
+++ b/ceeq/apps/queries/templates/q_projects/projects.html
@@ -30,9 +30,9 @@
                             <td class="col-md-3"><strong>Name</strong></td>
                             <td class="col-md-3"><strong>JIRA Version</strong></td>
                             <td class="col-md-2"><strong>JIRA URL</strong></td>
-                            <td class="col-md-2"><strong>Type</strong></td>
+                            <td class="col-md-2"><strong>Impact Map</strong></td>
                             <td class="col-md-2"><strong>Evaluation</strong></td>
-                            <td class="col-md-2"><strong>Update</strong></td>
+                            <td class="col-md-2"><strong>Instance</strong></td>
                         </tr>
                     </thead>
                     <tbody>
@@ -41,13 +41,13 @@
                                 <td><a href='{% url 'q_project_detail' project.id%}'>{{ project.name}}</a></td>
                                 <td>
                                     {% if project.jira_version == 'All Versions' %}
-                                        <a href="http://jira.west.com/issues/?jql=project = {{ project.jira_key }}" target="_blank">
+                                        <a href="{{ project.instance.url }}/issues/?jql=project={{ project.jira_key }}" target="_blank">
                                     {% else %}
-                                        <a href='http://jira.west.com/issues/?jql=project = {{ project.jira_key }} AND affectedVersion = "{{ project.jira_version }}" ' target="_blank">
+                                        <a href='{{ project.instance.url }}/issues/?jql=project={{ project.jira_key }} AND affectedVersion = "{{ project.jira_version }}" ' target="_blank">
                                     {% endif %}
                                     {{ project.jira_version }}</a>
                                 </td>
-                                <td><a href='http://jira.west.com/browse/{{ project.jira_key }}' target="_blank">{{ project.jira_key }}</a></td>
+                                <td><a href='{{ project.instance.url }}/browse/{{ project.jira_key }}' target="_blank">{{ project.jira_key }}</a></td>
                                 <td><a href="#framework_parameter" data-toggle="tab" id="project_type_{{ project.pk }}"> {{ project.impact_map.name }}</a></td>
                                 <td>
                                     {% if project.internal_score == 101 %}
@@ -74,15 +74,9 @@
                                                 {{ project.internal_score }}
                                             {% endif %}
                                         </a>
-                                        {% if superuser %}
-                                            <i class="fa fa-indent"></i>
-                                            <a href="{% url 'defects_density_log' project.id %}" onclick="$('#throbber').show();"> Log</a>
-                                        {% endif %}
                                     {% endif %}
                                 </td>
-                                <td><a href="{% url 'project_update_scores' project.id %}"
-                                       id="update_single_{{ project.id }}" onclick="$('#throbber').show();"
-                                       style="color: green; padding-left: 25%; cursor: pointer; cursor: hand;"><i class="fa fa-refresh"></i></a> </td>
+                                <td>{{ project.instance.url }}</td>
                             </tr>
                         {% endfor %}
                     </tbody>
